--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/react-loader": "^1.9.19",
+    "@sanity/vision": "3",
+    "next": "14.2.3",
+    "next-sanity": "^9.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "sanity": "3",
+    "styled-components": "6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
